why tf does vs code scream

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -452,55 +452,55 @@
  fight_phan_xich_long_loyalists_in_indochina:0 "Fight Phan Xich Long Loyalists"
 
 
-BUL_AUH_could_support_us:0 "§Y[AUH.getName]§! will receive a proposition of economic and military cooperation, making them able to support our claims."
-BUL_weapon_order:0 "Worldwide Arms Market"
-BUL_order_guns_from_france:0 "Order Guns From France"
-BUL_buy_british_uniforms:0 "Buy British Uniforms"
-BUL_purchase_austrian_canons:0 "Purchase Austrian Canons"
-BUL_order_guns_from_germany:0 "Order Guns From Germany"
-BUL_order_planes_from_germany:0 "Order Planes From Germany"
-BUL_finance_local_brigades:0 "Finance Local Brigades"
-AUH_investment_in_BUL:0 "Investments in Bulgaria"
-AUH_investment_in_BUL_desc:0 "The level of dependence from Bulgaria toward [AUH.getName] is §R[?BUL_vassalisation]§! \n\n The higher the dependency, the more benefits Austria will receive. \n\n [BUL.getAdjective] MALUSES [BUL.getFlag] \n §R0-2§! -> Nothing \n §R3-6§! -> §R-15%§! £pol_power \n §R7-10§! -> §R-30%§! £pol_power §YAND§! §R-2§! £civ_factory£ \n \n\n [AUH.getAdjective] BONUSES [AUH.getFlag] \n §G0-2§! -> Nothing \n §G3-6§! -> §G+10%§! £pol_power \n §G7-10§! -> §G+20%§! £pol_power §YAND§! §G+2§! £civ_factory£ \n"
-
-FRA_french_intervention_in_china:0 "French Intervention in China"
-FRA_leave_CHI:0 "French Intervention Timer"
-FRA_war_on_hainan_flag:0 "Is Planning to Invade Hainan"
-FRA_start_intervention_in_china:0 "Start Intervention in China"
-FRA_target_of_france:0 "Original Owner of Hainan"
-
-BUL_tighten_private_companies_control:0 "Tighten Private Companies Control"
-BUL_nationalize_foreign_industry:0 "Nationalize Foreign Industry"
-BUL_Complicate_investment_bureaucracy:0 "Complicate Investment Bureaucracy"
-BUL_counter_investments:0 "Counter Investments"
-BUL_vassalisation_augmentation:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get higher by §R1 Point§!."
-BUL_vassalisation_diminution:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get lower by §G1 Point§!."
-BUL_vassalisation_diminution_3:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get lower by §G3 Points§!."
-
-AUH_civil_investments_in_BUL:0 "Civil Investments in Old Country"
-AUH_interests_in_bulgaria:0 "Interests in Bulgaria"
-BUL_AUH_interests_in_bulgaria:0 "[AUH.getAdjective] Interests"
-AUH_invest_in_bulgarian_railways:0 "Invest in Bulgarian Railways"
-AUH_develop_local_shipyards:0 "Develop Local Shipyards"
-AUH_active_lobbying:0 "Active Lobbying"
-AUH_evidenzbureau_projects:0 "Evidenzbureau Projects"
-AUH_evidenzbureau_projects_desc:0 "Redl's reforms have made it possible to update our methods of investigation and to better prepare us in the face of external aggression. We must pursue the modernization of our information agency by allocating funds and exceptional authorizations."
-AUH_expand_the_bureau:0 "Form Hauptkundschaftstellen"
-AUH_fake_production_reports:0 "Produce Fake Production Reports"
-AUH_bribe_locals:0 "Bribe Locals"
-AUH_finance_operative_training:0 "Finance Operative Training"
-AUH_inspect_bureau_accounts:0 "Inspect Bureau Accounts"
-AUH_looking_for_spy_decision:0 "Start an §YInternal Investigation§! in order to flush out possible §Rspy§!."
-BUL_bonus_for_balkan_war:0 "Gives the following national spirit to [BUL.getFlag]§YBulgaria§! and all its allies for the duration of the war against the [TUR.getFlag]§YOttomans§!:"
-BUL_bonus_for_balkan_war_only_bulgaria:0 "Gives the following national spirit to [BUL.getFlag]§YBulgaria§! for the duration of the war against the [TUR.getFlag]§YOttomans§!:"
-BUL_idea_united_bulgarian_headquarters:0 "United Bulgarian Headquarters"
-BUL_united_headquarters:0 "United Bulgarian Headquarters"
-BUL_macedonia_influence_battle:0 "Each [MAC.getFlag]§YMacedonian§! state will be subject to alliegeance negotiations between [SER.getFlag]§YSerbia§! and [BUL.getFlag]§YBulgaria§!."
-BUL_macedonian_deal:0 "Proposes to [SER.getFlag]§YSerbia§! the creation of an autonomous [MAC.getFlag]§YMacedonian§! state."
-BUL_macedonian_deal_if_accepted:0 "If they accept, focus §YAnti-Ottoman Crusade§! will be auto-completed!"
-
-BUL_slower_industrial_expansion:0 "§YThis branch§! will provide §GVarious Bonuses§! but also §RSlower our Industrialisation§!.\n"
-BUL_faster_industrial_expansion:0 "§YThis branch§! will provide §GFaster Industrialisation§! at price of §RVarious Maluses§!.\n"
+ BUL_AUH_could_support_us:0 "§Y[AUH.getName]§! will receive a proposition of economic and military cooperation, making them able to support our claims."
+ BUL_weapon_order:0 "Worldwide Arms Market"
+ BUL_order_guns_from_france:0 "Order Guns From France"
+ BUL_buy_british_uniforms:0 "Buy British Uniforms"
+ BUL_purchase_austrian_canons:0 "Purchase Austrian Canons"
+ BUL_order_guns_from_germany:0 "Order Guns From Germany"
+ BUL_order_planes_from_germany:0 "Order Planes From Germany"
+ BUL_finance_local_brigades:0 "Finance Local Brigades"
+ AUH_investment_in_BUL:0 "Investments in Bulgaria"
+ AUH_investment_in_BUL_desc:0 "The level of dependence from Bulgaria toward [AUH.getName] is §R[?BUL_vassalisation]§! \n\n The higher the dependency, the more benefits Austria will receive. \n\n [BUL.getAdjective] MALUSES [BUL.getFlag] \n §R0-2§! -> Nothing \n §R3-6§! -> §R-15%§!  £pol_power \n §R7-10§! -> §R-30%§! £pol_power §YAND§! §R-2§! £civ_factory£ \n \n\n [AUH.getAdjective] BONUSES [AUH.getFlag] \n §G0-2§! -> Nothing \n §G3-6§! -> §G+10%§! £pol_power \n §G7-10§! -> §G+20%§! £pol_power §YAND§! §G+2§! £civ_factory£ \n"
+ 
+ FRA_french_intervention_in_china:0 "French Intervention in China"
+ FRA_leave_CHI:0 "French Intervention Timer"
+ FRA_war_on_hainan_flag:0 "Is Planning to Invade Hainan"
+ FRA_start_intervention_in_china:0 "Start Intervention in China"
+ FRA_target_of_france:0 "Original Owner of Hainan"
+ 
+ BUL_tighten_private_companies_control:0 "Tighten Private Companies Control"
+ BUL_nationalize_foreign_industry:0 "Nationalize Foreign Industry"
+ BUL_Complicate_investment_bureaucracy:0 "Complicate Investment Bureaucracy"
+ BUL_counter_investments:0 "Counter Investments"
+ BUL_vassalisation_augmentation:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get higher by §R1 Point§!."
+ BUL_vassalisation_diminution:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get lower by §G1 Point§!."
+ BUL_vassalisation_diminution_3:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get lower by §G3 Points§!."
+ 
+ AUH_civil_investments_in_BUL:0 "Civil Investments in Old Country"
+ AUH_interests_in_bulgaria:0 "Interests in Bulgaria"
+ BUL_AUH_interests_in_bulgaria:0 "[AUH.getAdjective] Interests"
+ AUH_invest_in_bulgarian_railways:0 "Invest in Bulgarian Railways"
+ AUH_develop_local_shipyards:0 "Develop Local Shipyards"
+ AUH_active_lobbying:0 "Active Lobbying"
+ AUH_evidenzbureau_projects:0 "Evidenzbureau Projects"
+ AUH_evidenzbureau_projects_desc:0 "Redl's reforms have made it possible to update our methods of investigation and to better prepare us in the face of external aggression. We must pursue the modernization of our information agency by allocating funds and exceptional  authorizations."
+ AUH_expand_the_bureau:0 "Form Hauptkundschaftstellen"
+ AUH_fake_production_reports:0 "Produce Fake Production Reports"
+ AUH_bribe_locals:0 "Bribe Locals"
+ AUH_finance_operative_training:0 "Finance Operative Training"
+ AUH_inspect_bureau_accounts:0 "Inspect Bureau Accounts"
+ AUH_looking_for_spy_decision:0 "Start an §YInternal Investigation§! in order to flush out possible §Rspy§!."
+ BUL_bonus_for_balkan_war:0 "Gives the following national spirit to [BUL.getFlag]§YBulgaria§! and all its allies for the duration of the war against the [TUR.getFlag]§YOttomans§!:"
+ BUL_bonus_for_balkan_war_only_bulgaria:0 "Gives the following national spirit to [BUL.getFlag]§YBulgaria§! for the duration of the war against the [TUR.getFlag]§YOttomans§!:"
+ BUL_idea_united_bulgarian_headquarters:0 "United Bulgarian Headquarters"
+ BUL_united_headquarters:0 "United Bulgarian Headquarters"
+ BUL_macedonia_influence_battle:0 "Each [MAC.getFlag]§YMacedonian§! state will be subject to alliegeance negotiations between [SER.getFlag]§YSerbia§! and [BUL.getFlag]§YBulgaria§!."
+ BUL_macedonian_deal:0 "Proposes to [SER.getFlag]§YSerbia§! the creation of an autonomous [MAC.getFlag]§YMacedonian§! state."
+ BUL_macedonian_deal_if_accepted:0 "If they accept, focus §YAnti-Ottoman Crusade§! will be auto-completed!"
+ 
+ BUL_slower_industrial_expansion:0 "§YThis branch§! will provide §GVarious Bonuses§! but also §RSlower our Industrialisation§!.\n"
+ BUL_faster_industrial_expansion:0 "§YThis branch§! will provide §GFaster Industrialisation§! at price of §RVarious Maluses§!.\n"
 
  FRA_situation_in_morocco:0 "Intervene in Morocco"
  FRA_situation_in_morocco_desc:0 "Our control over Morocco is enough to remove what little autonomy the [MOR.getLeader] government has. Our armed forces on the spot are only waiting for the order to establish a protectorate of Morocco."
@@ -695,9 +695,9 @@ BUL_faster_industrial_expansion:0 "§YThis branch§! will provide §GFaster Indu
  AUH_has_invested_in_mavag:0 "Has invested in MÁVAG"
  AUH_deploy_deploy_jagdkommandos:0 "\n§Y2 Divisions§! composed with §Y9 moutainers units§! and §YArtillery support§! will by deployed to §YVienna§!."
  POL_deploy_polish_legion:0 "Deploy Polish Legion"
-GRE_entente_wont_help_venizelos:0 "Countries in faction with §Y[FRA.getFlag][FRA.getName]§! and §Y[ENG.getFlag][ENG.getName]§! wont help §CEleftherios Kyriákou Venizélos§! in case of §RCivil War§!."
+ GRE_entente_wont_help_venizelos:0 "Countries in faction with §Y[FRA.getFlag][FRA.getName]§! and §Y[ENG.getFlag][ENG.getName]§! wont help §CEleftherios Kyriákou Venizélos§! in case of §RCivil War§!."
  gre_cp_aid:0 "Central Powers Aid"
-civil_war_has_been_triggered:0 "The Civil War Occured"
+ civil_war_has_been_triggered:0 "The Civil War Occured"
 
  AUH_you_should_first_beat_hungarian:0 "\n\n§RThe Hungarians will be vehemently against such a measure, a negation of the Ausgleich of 1867!§! \nYou should first crush§Y Hungarian Opposition!§!"
  AUH_federation_needs_preparation:0 "\n\n§RIf there hasn't been a change in policy on minorities before the congress, there could be negative consequences!§!"
@@ -730,11 +730,11 @@ civil_war_has_been_triggered:0 "The Civil War Occured"
  AUH_decision_mitteleuropa_guarantee:0 "Honor Doppelte Allianz"
  AUH_decision_mitteleuropa_guarantee_desc:0 "Our brothers are endangered! Only to save them is us. We will officially declare that we honor the Dual Alliance and raise up with the imperial wrath upon the enemies of the Germans."
 
-AUH_collaboration_governement:0 "Collaboration Governements"
-AUH_align_romania:0 "Align Romania"
-AUH_align_romania_desc:0 "The Romanian state is defeated, we are now free to install a favorable regime capable of supporting us in our next operations."
-AUH_align_ukraine:0 "Align Ukraine"
-AUH_align_ukraine_desc:0 "The Ukranian region is defeated, we are now free to install a favorable regime capable of supporting us in our next operations."
+ AUH_collaboration_governement:0 "Collaboration Governements"
+ AUH_align_romania:0 "Align Romania"
+ AUH_align_romania_desc:0 "The Romanian state is defeated, we are now free to install a favorable regime capable of supporting us in our next operations."
+ AUH_align_ukraine:0 "Align Ukraine"
+ AUH_align_ukraine_desc:0 "The Ukranian region is defeated, we are now free to install a favorable regime capable of supporting us in our next operations."
 
  AUH_unlock_military_focuses:0 "§YUnlock the military focus tree§!"
  AUH_elections:0 "Elections"
@@ -8501,7 +8501,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  BRA_contestado_war_2:0 "Second Offensive"
  BRA_contestado_war_3:0 "Third Offensive"
  BRA_contestado_war_4:0 "Fourth Offensive"
- BRA_contestado_war_5:0 "Fith Offensive"
+ BRA_contestado_war_5:0 "Fifth Offensive"
  BRA_contestado_war_6:0 "Sixth Offensive"
  BRA_contestado_war_7:0 "Seventh Offensive"
  BRA_contestado_war_8:0 "Final Offensive"
