--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -189,6 +189,7 @@
  RUS_edict_on_progressive_tax: "Emperor's Edict on Progressive Taxation"
  RUS_edict_on_grand_fleet_programme: "Emperor's Edict on Grand Fleet Programme"
  RUS_edict_on_increased_conscription: "Emperor's Edict on changing the Charter on military service"
+ RUS_edict_on_kholm_governorate: "Emperor's Edict on Kholm Governorate"
  RUS_famine_relief: "Famine Relief"
  RUS_currently_building_a_railway: "Currently building a railway"
  RUS_olonets_railway: "Build Olonets Railway"
