--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -275,7 +275,9 @@
 
  not_reactionary_prime_minister_scripted_trigger_tt: "Not: §YPrime Minister§! is a §qReactionary§!"
  reactionary_prime_minister_scripted_trigger_tt: "§YPrime Minister§! is a §qReactionary§!"
+ not_conservative_prime_minister_scripted_trigger_tt: "Not: §YPrime Minister§! is a §gConservative§!"
  conservative_prime_minister_scripted_trigger_tt: "§YPrime Minister§! is a §gConservative§!"
+ not_reformist_prime_minister_scripted_trigger_tt: "Not: §YPrime Minister§! is a §CReformist§!"
  reformist_prime_minister_scripted_trigger_tt: "§YPrime Minister§! is a §CReformist§!"
  krivoshein_premiership_scripted_trigger_tt: "§Y[RUS_alexander_krivoshein.GetName]§! is §YPrime Minister§!"
  stolypin_premiership_scripted_trigger_tt: "§Y[RUS_pyotr_stolypin.GetName]§! is §YPrime Minister§!"
