--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -281,6 +281,7 @@
  reformist_prime_minister_scripted_trigger_tt: "§YPrime Minister§! is a §CReformist§!"
  krivoshein_premiership_scripted_trigger_tt: "§Y[RUS_alexander_krivoshein.GetName]§! is §YPrime Minister§!"
  stolypin_premiership_scripted_trigger_tt: "§Y[RUS_pyotr_stolypin.GetName]§! is §YPrime Minister§!"
+ not_reformist_minister_of_finance_scripted_trigger_tt: "Not: §YMinister of Finance§! is a §CReformist§!"
  reformist_minister_of_finance_scripted_trigger_tt: "§YMinister of Finance§! is a §CReformist§!"
  has_agrarian_question_scripted_trigger_tt: "Has national spirit §YAgrarian Question§!"
  has_labour_question_scripted_trigger_tt: "Has national spirit §YLabour Question§!"
