Prosecution of monopolies mechanic

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -134,6 +134,8 @@
  RUS_law_on_introduction_of_the_income_tax_sc: "Law on Introduction of the Income Tax"
  RUS_law_on_temporary_progressive_taxation_sd: "Law on Temporary Progressive Taxation"
  RUS_law_on_temporary_progressive_taxation_sc: "Law on Temporary Progressive Taxation"
+ RUS_law_on_syndicates_sd: "Law on Syndicates"
+ RUS_law_on_syndicates_sc: "Law on Syndicates"
  RUS_new_conscription_law_sd: "Law on changing the Charter on military service"
  RUS_new_conscription_law_sc: "Law on changing the Charter on military service"
  RUS_grand_fleet_programme_sd: "Baltic Fleet enhanced shipbuilding programme"
@@ -190,6 +192,10 @@
  RUS_edict_on_grand_fleet_programme: "Emperor's Edict on Grand Fleet Programme"
  RUS_edict_on_increased_conscription: "Emperor's Edict on changing the Charter on military service"
  RUS_edict_on_kholm_governorate: "Emperor's Edict on Kholm Governorate"
+ RUS_prosecute_produgol_decision: "Prosecute Produgol"
+ RUS_prosecute_prodamet_decision: "Prosecute Prodamet"
+ RUS_prosecute_prodvagon_decision: "Prosecite Prodvagon"
+ RUS_currently_prosecuting_a_monopoly: "Currently prosecuting a monopoly"
  RUS_famine_relief: "Famine Relief"
  RUS_currently_building_a_railway: "Currently building a railway"
  RUS_olonets_railway: "Build Olonets Railway"
@@ -344,6 +350,10 @@
  RUS_autonomy_for_polish_cities: "Autonomy for Polish Cities"
  RUS_polish_zemstvo: "Introduce Zemstvo in Poland"
  RUS_autonomy_for_poland: "Autonomy for Poland"
+ RUS_prosecute_monopolies: "Prosecute Monopolies"
+ RUS_has_accepted_a_bribe: "Has accepted a bribe"
+ RUS_change_of_course: "Reconcile with Finland"
+ RUS_finish_finland_off: "Finish Finland Off"
  RUS_abolish_pale_of_settlement: "Emancipation of Jews"
  RUS_persian_campaign: "Persian campaign"
  RUS_support_mohammed_ali_shah: "Support for Muhammad Ali Shah"
@@ -481,6 +491,11 @@
  ww1_russian_empire.29.d: ""
  ww1_russian_empire.29.a: "I couldn't agree more with Maklakov"
  ww1_russian_empire.29.b: "Krivoshein's economic agenda is what we need"
+ ww1_russian_empire.31.t: "Monopolists Make a Proposal"
+ ww1_russian_empire.31.a: "Very well"
+ ww1_russian_empire.31.b: "This won't save them"
+
+ #FOREIGN POLICY EVENTS
  ww1_russian_empire.30.t: "Persia rejects the ultimatum"
  ww1_russian_empire.30.a: "An invasion is an invasion"
 
