--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -2096,13 +2096,12 @@
  FIJ_fascism_DEF:1 "Империя Морей"
  FIJ_democratic:1 "Меланезийская Федерацияя"
  FIJ_democratic_DEF:1 "Меланезийская Федерация"
- FIJ_neutrality:0 "Фиджи"
- FIJ_neutrality_DEF:0 "Фиджи"
+ FIJ_neutrality:0 "Королевство Фиджи"
+ FIJ_neutrality_DEF:0 "Королевство Фиджи"
  FIJ_communism:1 "Тихоокеанское Рабочее Государство"
  FIJ_communism_DEF:1 "Тихоокеанское Рабочее Государство"
- FIJ_fascism_ADJ:1 "Морск"
+ FIJ_fascism_ADJ:1 "Тихоокеанск"
  FIJ_democratic_ADJ:1 "Меланезийск"
- FIJ_neutrality_ADJ:0 "Фиджийск"
  FIJ_communism_ADJ:1 "Тихоокеанск"
  FIJ:0 "Фиджи"
  FIJ_DEF:0 "Фиджи"
@@ -2116,7 +2115,7 @@
  TAH:0 "Таити"
  TAH_DEF:0 "Таити"
  TAH_ADJ:0 "Таитянск"
- TAH_democratic_ADJ:0 "Французско Полинезийск"
+ TAH_democratic_ADJ:0 "Французско-Полинезийск"
  TAH_communism_ADJ:0 "Таитянск"
  TAH_fascism_ADJ:0 "Таитянск"
  FSM_democratic:1 "Федеративные Штаты Микронезии"
@@ -2125,6 +2124,8 @@
  FSM_communism_DEF:0 "Союзное Государство Большой Понпеи"
  FSM_fascism:0 "Вторая Династическая Империя Соделеров"
  FSM_fascism_DEF:0 "Вторая Династическая Империя Соделеров"
+ FSM_neutrality:0 "Микронезийские Племена"
+ FSM_neutrality_DEF:0 "Микронезийские Племена"
  FSM:0 "Микронезия"
  FSM_DEF:0 "Микронезия"
  FSM_ADJ:0 "Микронезийск"
@@ -2168,13 +2169,12 @@
  SOL_ADJ:0 "Соломонвск"
  SAM_democratic:0 "Независимое Государство Самоа"
  SAM_democratic_DEF:0 "Независимое Государство Самоа"
- SAM_democratic_ADJ:0 "Самоанск"
  SAM_communism:0 "Самоанская Народная Республика"
  SAM_communism_DEF:0 "Самоанская Народная Республика"
- SAM_communism_ADJ:0 "Самоанск"
+ SAM_neutrality:0 "Королевство Самоа"
+ SAM_neutrality_DEF:0 "tКоролевство Самоа"
  SAM_fascism:0 "Манаистское Государство Самоа"
  SAM_fascism_DEF:0 "Манаистское Государство Самоа"
- SAM_fascism_ADJ:0 "Самоанск"
  SAM:0 "Самоа"
  SAM_DEF:0 "Самоа"
  SAM_ADJ:0 "Самоанск"
