--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -1956,4 +1956,7 @@
  SEN_communism_party_long:0 "Лига Защиты Черной Расы"
 
  MLW_neutrality_party:0 "Движение Чилембве"
+ 
+ FIJ_neutrality_party:0 "Вунивалу"
 
+ SAM_neutrality_party:0 "Малиетоа"
