--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -4033,6 +4033,10 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
 
  MLW_john_chilembwe:0 "John Chilembwe"
  
+ FIJ_penaia_kadavulevu:0 "Penaia Kadavulevu"
+
+ SAM_malietoa_tanumafili_i:0 "Malietoa Tanumafili I"
+ 
  
  
  
