--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -41,6 +41,14 @@
  RUS_launch_brusilov_offensive:0 "Начать Брусиловский прорыв"
  RUS_brusilov_offensive:0 "Брусиловский прорыв"
  
+ RUS_support_in_civil_war:0 "Интервенция в гражданскую войну в России"
+ RUS_support_in_civil_war_desc:0 "С поражением §Y[OTT.GetFlag]Османской Империи§! мы наконец-то обеспечили морской путь к антибольшевистским силам на юге. \n\nВ нашем распоряжении находится §Yоружие§!, §Yартиллерия§! и §Yмногое другое§!.  \n\nДоступные поставки: [?SRA_available_shipments|+0]\n\nДоступные поставки будут увеличиваться на §Yдве§! партии каждый месяц."
+ 
+ send_equipment_to_FROM_rifles:0 "Отправить винтовки государству [FROM.getName]"
+ send_equipment_to_SRA_fighter:0 "Отправить истребители государству [FROM.getName]"
+ send_equipment_to_SRA_artillery:0 "Отправить артиллерию государству [FROM.getName]"
+ send_equipment_to_SRA_tanks:0 "Отправить танки государству [FROM.getName]"
+  
  decision_cost_CP_5:0 "£command_power §Y5§!"
  decision_cost_CP_5_blocked:0 "£command_power  §R5§!"
  decision_cost_CP_5_tooltip:0 "Принятие решения стоит £command_power §Y5§!"
@@ -87,6 +95,9 @@
 
  2500_infantry_equipment:0 "£rifle_texticon §H10000§!"
  2500_infantry_equipment_blocked:0 "£rifle_texticon §R10000§!"
+
+ 3000_infantry_equipment_1:0 "£rifle_texticon §H3000§!"
+ 3000_infantry_equipment_1_blocked:0 "£rifle_texticon §R3000§!"
 
  150_support_equipment:0 "£artillery_big_texticon §H150§!"
  150_support_equipment_blocked:0 "£artillery_big_texticon §R150§!"
@@ -199,6 +210,7 @@
  GER_form_courland:0 "Образовать Курляндию"
  GER_form_baltic_duchy:0 "Образовать Балтийское Герцогство"
  GER_form_georgia:0 "Образовать Королевство Грузия"
+ GER_form_netherlands:0 "Образовать Нидерланды"
  GER_unite_baltics:0 "Объединить Прибалтику"
  GER_help_white_russia:0 "Помочь Белой России"
  GER_help_white_russia_desc:0 "Хотя Ленин и его большевики обеспечили нашу победу на Восточном фронте своим саботажем военных действий и последующим переворотом, их режим и выходки больше не нужны. Их идеалы коммунизма и мировой революции угрожают самой основе немецкого европейского порядка и, таким образом, прямо противоречат нашей власти. Лучше нейтрализовать эту угрозу на наших восточных флангах и повернуть красный поток."
@@ -449,7 +461,7 @@
  BUL_order_planes_from_germany:0 "Заказать самолеты из Германии"
  BUL_finance_local_brigades:0 "Финансирование местных бригад"
  AUH_investment_in_BUL:0 "Инвестиции в Болгарию"
- AUH_investment_in_BUL_desc:0 "Уровень зависимости Болгарии от Австрии на данный момент - §R[?BUL_vassalisation]§! \n\n Чем выше зависимость, тем больше выгоды получает Австрия. \n\n [BUL.getAdjective]ие дебаффы [BUL.getFlag] \n §R0-2§! -> Ничего \n §R3-6§! -> §R-15%§! £pol_power \n §R7-10§! -> §R-30%§! £pol_power §YИ§! §R-2§! £civ_factory£ \n \n\n [AUH.getAdjective]ие БОНУСЫ [AUH.getFlag] \n §G0-2§! -> Ничего \n §G3-6§! -> §G+10%§! £pol_power \n §G7-10§! -> §G+20%§! £pol_power §YИ§! §G+2§! £civ_factory£ \n"
+ AUH_investment_in_BUL_desc:0 "Уровень зависимости Болгарии от государства [AUH.getName] на данный момент - §R[?BUL_vassalisation]§! \n\n Чем выше зависимость, тем больше выгоды получает Австрия. \n\n [BUL.getAdjective]ие дебаффы [BUL.getFlag] \n §R0-2§! -> Ничего \n §R3-6§! -> §R-15%§! £pol_power \n §R7-10§! -> §R-30%§! £pol_power §YИ§! §R-2§! £civ_factory£ \n \n\n [AUH.getAdjective]ие БОНУСЫ [AUH.getFlag] \n §G0-2§! -> Ничего \n §G3-6§! -> §G+10%§! £pol_power \n §G7-10§! -> §G+20%§! £pol_power §YИ§! §G+2§! £civ_factory£ \n"
 
  FRA_french_intervention_in_china:0 "Французская интервенция в Китай"
  FRA_leave_CHI:0 "Таймер французского вмешательства"
@@ -1288,6 +1300,11 @@
  SOV_recruit_militia:0 "Поднять ополчение в [FROM.getName]"
  SOV_recruiting_militia: "Уже набирает ополчение"
  possible_soviet_militia_recruitment:0 "Возможность набора в ополчение"
+ SOV_industrial_focus: "Реорганизация промышленности"
+ SOV_focus_infantry_weapon: "Расширить производство пехотного снаряжения"
+ SOV_focus_support_equipment: "Расширить производство дополнительного оснащения"
+ SOV_focus_artillery_equipment: "Расширить производство артиллерии"
+ SOV_focus_plane_equipment: "Расширить производство истребителей"
 
  ITA_libyan_war_mission:0 "Итало-турецкая война"
  ITA_libyan_war_mission_desc:0 "Если [ITA.GetNameDef] не сможет захватить Ливию как можно скорее и затянет с интервенцией, [TUR.GetNameDef] сможет провести Лондонскую конференцию и потребовать репарации от итальянцев."
@@ -9006,7 +9023,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SRA_lend_lease_mock_truck:0 "Доставка автотранспорта из Великобритании"
  SRA_lend_lease_mock_fighter:0 "Доставка истребителей из  Великобритании"
  SRA_lend_lease_mock_tanks:0 "Доставка танков из Великобритании"
- SRA_lend_lease_ongoing_tt:0 "Меньше 2 текущих поставок"
+ SRA_lend_lease_ongoing_tt:0 "Как минимум одна доступная партия"
 
  SRA_rada_interactions:0 "Кубанская Рада"
  SRA_rada_interactions_desc:0 "Пока мы разбираемся со сложностями нашего союза с Кубанской радой, нам необходимо использовать потенциальные преимущества наших отношений. Эти отношения открывают большие перспективы, если мы сохраним тонкий баланс между их автономией и нашими стратегическими интересами. \n\n§RЕсли автономия Кубанской Рады будет чрезмерно расширяться, а лояльность уменьшаться, они могут задуматься об отделении от нашего правительства!§! \n\nЛояльность Рады: [?SRA_cossack_loyalty|+0]\nАвтономия Рады: [?SRA_cossack_autonomy|+0]\nБлагосклонность Рады: [?SRA_cossack_favours|+0]"
