--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -2451,7 +2451,9 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_brazil.20.t:0 "Португалия отказывается от объединения"
  ww1_brazil.20.d:0 "[POR.GetAdjective]ое правительство безрассудно решило отвергнуть наше предложение объединить наши нации под властью [Root.GetLeader].\nХотя для нас это совершенно неприемлемо, это лишь небольшая помеха.\n\nВ конце концов, им придется подчиниться нашим требованиям, как это делают другие..."
  ww1_brazil.20.a:0 "Их судьба предрешена."
-  
+ ww1_brazil.21.t: "Contestado War: Maria Rosa Killed"
+ ww1_brazil.21.d: "After several strikes, the spiritual leader of the insurgents, a 15-year-old girl Maria Rosa, was killed on the banks of the Caçador river. Rverything was destroyed, the estimated number of razed houses is 5000 women that fought along the men were killed the number of irregulars killed is over 600. The villages of Caçador and Santa Maria were annihilated. We cannot guarantee that all such bandits that festered in the Contestado may have disappeared, but the mission entrusted to the Army is now accomplished."
+ ww1_brazil.21.a: "Finish off the survivors."
  ww1_brazil.22.t:0 "Смерть Жозе Параньоса"
  ww1_brazil.22.d:0 "Умер Жозе Параньос, барон Рио-Бранко. Последние дни его жизни были агонией, продленной благодаря достижениям науки. Город, штаты, вся страна, соседние государства, Америка, весь мир с тревогой следили за состоянием великого человека. И великий человек пал. Его работа была огромной и грандиозной. У него было две жизни: жизнь талантливого журналиста, ставшего консулом, и жизнь консула, ставшего величайшим бразильцем за свою бескорыстную любовь к родине. Он был расширителем Бразилии, расширяя ее мирной дипломатией."
  ww1_brazil.22.a:0 "Покровитель бразильской дипломатии."
@@ -14375,7 +14377,7 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_sra.40.t: "The British Lifeline"
  ww1_sra.40.d: "As the conflict against the Bolsheviks intensifies, we've received a substantial boost from an unexpected quarter. The United Kingdom, alarmed by the potential of communist expansion and the threat it poses to their interests, has extended a helping hand to our cause. [FROM.getName], understanding the precarious situation on the Eastern Front and the potential fall of vast military supplies into hostile hands, has dispatched not only £100 million worth of crucial military equipment but also advisors to bolster our efforts. This significant influx of support could very well tilt the scales in our favor."
  ww1_sra.40.a: "Time to equip an unstoppable army!"
- sra_eng_lend_lease: "The §Y[ENG.getname]§! will occasionally send us shipments of §Yguns§!, §Yartillery§! and §Ymore§!."
+ sra_eng_lend_lease: "The §Y[ENG.getname]§! will occasionally send us shipments of §Yguns§!, §Yartillery§! and §Ymore§! once the §Y[OTT.GetFlag]Ottoman Empire§! has been defeated."
 
  ww1_sra.35.t: "[SRA.getName] demands subjugation!"
  ww1_sra.35.d: "The [SRA.getName] demands that we submit and surrender all authority - military and administrative. They threaten us with an invasion if we reject."
