--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -3183,6 +3183,7 @@
  SOV_labor_conscription:0 "Трудовая повинность"
  SOV_labor_conscription_desc:0 "Нам нужно больше рабочих, чтобы выполнять работу, так как у нас нехватка рабочей силы. Мы должны призвать людей на работу, чтобы увеличить производство необходимых товаров для этих экстремальных времен."
  sov_recent_industry_rehab:0 "Предыдущая промышленная реформа"
+ sov_recent_military_rehab:0 "Предыдущая военная реформа"
  SOV_labour_conscription.tt:0 "Выбор этого фокуса будет §Rстоить§! §Y100000 людских ресурсов§!."
  SOV_dictatorship_of_the_proletariat:0 "Диктатура пролетариата"
  SOV_decree_on_food_dictatorship:0 "Декрет о продовольственной диктатуре"
@@ -3254,13 +3255,6 @@
  RUS_strengthen_duma_desc:0 "Демократическая партия - октябристы "
  RUS_provisional_government: "Временное правительство"
  RUS_provisional_government_desc:0 "Монархия была свергнута. Россия погрузилась в эпоху Смуты, и только решительные реформы и действия новой власти должны были стабилизировать страну."
- RUS_support_in_civil_war:0 "Intervention in Russian Civil War"
-
- send_equipment_to_FROM_rifles:0 "Send Rifles to [FROM.getName]"
- send_equipment_to_SRA_fighter:0 "Send Fighters to [FROM.getName]"
- send_equipment_to_SRA_artillery:0 "Send Artillery to [FROM.getName]"   
-
- 
  RUS_provisional_committee: "[Root.GetProvisionalGovernmentName]"
  is_sending_equipement_to_FROM:0 "Is Already Sending Equipement"
  RUS_provisional_committee_desc:0 "The call for constitutional reforms cannot be ignored any longer. Establishing a constitutionalist government will mark a significant shift in our governance, aiming to balance the autocratic power with modern democratic ideals, reflecting the changing times."
@@ -3502,6 +3496,7 @@
  SER_bw2_victory_tt: "Завершив этот фокус, вы откроете остальные политические фокусы"
  SER_integrate_SCS: "Интегрировать хорватов"
  SER_integrate_montenegro: "Собрание Подгорицы"
+ SER_integrate_montenegro_desc:0 "With the liberation of Montenegro an assembly has been called Podgorica, to formalise the annexation of the country into Yugoslavia.
  SER_grand_coalition:0 "Наследие Большой коалиции"
  SER_grand_coalition_desc:0 "We have been ruled by the coalition government since 1908. The coalition held us together in the face of the enemies."
  SER_concessions_to_coalition:0 "Уступки партнерам по коалиции"
@@ -3536,11 +3531,12 @@
  SER_rely_on_opposition:0 "Опираться на независимых радикалов"
  SER_balkan_strategy:0 "Балканская стратегия"
  SER_chetnik_situation:0 "Поддержка групп сопротивления"
- SER_chetnik_situation_desc:0 "The Chetniks are a group of guerrilas deep within Ottoman territory. We should increase aid to them, thereby giving us a force behind enemy lines.
+ SER_chetnik_situation_desc:0 "The Chetniks are a group of guerrilas deep within Ottoman territory. We should increase aid to them, thereby giving us a force behind enemy lines."
  SER_balkan_alliance:0 "Планы Балканского альянса"
  SER_balkan_alliance_desc:0 " The Balkan League was first attempted even during the rule of Prince Mihailo Obrenović. His premature death prevented the alliance from being formed. Now, we have a chance to form the alliance and liberate our brothers from the Ottoman Empire."
  SER_unexpected_opportunity:0 "Неожиданная возможность"
  SER_start_the_races_AUH:0 "Освобождение земель Габсбургов"
+ SER_start_the_races_AUH_desc:0 "For centuries the South Slavs of Croatia, Bosnia and Slovenia have suffered under Habsburg rule. It is time we prepare for their liberation."
  SER_formalize_the_alliance:0 "Формализация альянса"
  SER_government_crisis:0 "Государственный кризис"
  SER_government_crisis_desc:0 "The government has fallen apart. We need to form a new one that will be sustainable, though we might need elections for it."
@@ -3562,7 +3558,9 @@
  SER_stir_conflict_in_radical_party:0 "Разжигание противоречий в Радикальной партии"
  SER_solve_inter_party_divides:0 "Устранение межпартийных разногласий"
  SER_reject_republicanism:0 "Отказ от республиканства"
+ SER_reject_republicanism_desc:0 "There are some in the Serbian political scene who wish to get rid of the monarchy. This is foolish. It was the Karadordevic dynasty's founder who led Serbia during the first uprising against Ottoman rule, making them true patriots unlike the Obrenovics. The very destiny of Serbs is tied to monarchy itself."
  SER_meet_with_crown_prince:0 "Встреча с кронпринцем"
+ SER_meet_with_crown_prince_desc:0 "Meeting with Crown Prince Alexander would enable us to influence the King and gain support for our political goals." 
  SER_unite_the_parties:0 "Объединение Радикальной партии"
  SER_deal_on_our_terms:0 "Сделка на наших условиях"
  SER_deal_on_our_terms_desc:0 "The Austrians gave up on the Pig War. We have the upper hand now and we have to ensure that we get what we want from them."
@@ -3570,6 +3568,7 @@
  SER_economic_independence:0 "Экономическая независимость"
  SER_end_the_pig_war:0 "Покончить со "Свиной войной""
  SER_treaty_with_Bulgaria:0 "Договор с Болгарией"
+ SER_treaty_with_Bulgaria_desc:0 "While we dont always see eye to eye with the Bulgars, its clear that we will need their help to banish Ottoman rule from the Balkans.
  SER_new_situation:0 "Новая политическая ситуация"
  SER_increase_in_party_influence:0 "Поддержка умеренной радикальной фракции"
  SER_negotiate_with_opposition:0 "Переговоры с независимыми радикалами"
@@ -3581,6 +3580,7 @@
  SER_army_restoration_act_passed:0 "Army Restoration Act Passed"
  SER_pilot_training:0 "Обучение пилотов"
  SER_buy_airplanes:0 "Покупка самолетов"
+ SER_buy_airplanes_desc:0 "While relatively new and untested, the Airplane is widely considered to have massive potential. Just like the Great Powers, we too should invest in this new frontier of warfare."
  SER_airport_belgrade:0 "Строительство аэропорта в Белграде"
  SER_judicial_improvements:0 "Совершенствование судебной системы"
  SER_press_improvements:0 "Закон о свободе печати"
@@ -8515,7 +8515,7 @@
  BRA_campanha_civilista: "Цивилистическая компания"
  BRA_campanha_civilista_desc:0 "Кампания Руи Барбозы характеризовалась тесной связью с населением и проведением интенсивных митингов, которые проводились на импровизированных стендах из ящиков. Руи путешествовал на корабле, конном экипаже и поезде через Баию, Сан-Паулу, Минас-Жерайс и Рио-де-Жанейро."
  BRA_reform_the_republic: "Реформировать республику"
- BRA_reform_the_republic_desc:0 ""
+ BRA_reform_the_republic_desc:0 "The republic has become an absurd corrupt parody of itself."
  BRA_pact_of_ouro_fino: "Пакт Ору-Фину"
  BRA_pact_of_ouro_fino_desc:0 "Губернаторы Сан-Паулу и Минаса решили заключить союз, главная цель которого - сохранить президента, который гарантировал бы интересы олигархов этих двух штатов."
  BRA_public_education_program: "Программа государственного образования"
