--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -1167,6 +1167,10 @@
  SOV_idea_red_guard:0 "Красная гвардия"
  SOV_idea_red_guard_desc:0 "Советское правительство еще не сформировало армию и полагается на повстанческие бригады Красной гвардии."
  SOV_idea_war_communism:0 "Военный коммунизм"
+ SOV_idea_focus_infantry_equipment:0 "Расширенное производство пехотного снаряжения"
+ SOV_idea_focus_support_equipment:0 "Расширенное производство дополнительного оснащения"
+ SOV_idea_focus_artillery_equipment:0 "Расширенное производство артиллерии"
+ SOV_idea_focus_plane_equipment:0 "Расширенное производство истребителей"
  SOV_idea_famine:0 "Великий голод"
  SOV_idea_NEP:0 "Новая экономическая политика"
  SOV_idea_first_five_year_plan:0 "Первый пятилетний план"
@@ -2906,6 +2910,7 @@
  SRA_british_training_idea:0 "British Training"
  SRA_counter_intelligence:0 "Counter Intelligence"
  SRA_special_council_idea:0 "Special Council"
+ SRA_british_advisors:0 "British Advisors"
  #DON
  DON_alekseev_organization_1:0 "Alekseev Organization"
  DON_alekseev_organization_2:0 "Alekseev Organization"
