--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -742,7 +742,7 @@
  STATE_741: "Юго-Восточная Камбоджа"
  STATE_742: "Каратегин"
  STATE_743: "Сеута и Мелилья"
- STATE_744: "Далянь"
+ STATE_744: "Квантун"
  STATE_745: "Цзяо-Чжоу"
  STATE_746: "Вэйхайвэй"
  STATE_747: "Асир"
@@ -1187,7 +1187,6 @@
  PONDICHERRY_STATE: "Pondicherry"
  KWANTUNG_STATE: "Kwantung" #關東
  KVANTUNSKAYA_STATE: "Kvantunskaya"
- DAIREN_STATE: "Dairen"
  PARNU_STATE: "Pärnu"
  PERNAU_STATE: "Pernau"
  RAKVERE_STATE: "Rakvere"
