--- a/localisation/russian/ww1_research_l_russian.yml
+++ b/localisation/russian/ww1_research_l_russian.yml
@@ -12,9 +12,13 @@
  machine_tools5:0 "Станки V"
  machine_tools5_desc:0 "Благодаря новому передовому оборудованию мы сможем увеличить военное производство как никогда раньше."
  industrial_complex1:0 "Рассредоточенная промышленность I"
+ industrial_complex1_desc:0 "" 
  industrial_complex2:0 "Рассредоточенная промышленность II"
+ industrial_complex2_desc:0 ""
  industrial_complex3:0 "Рассредоточенная промышленность III"
+ industrial_complex3_desc:0 ""
  industrial_complex4:0 "Рассредоточенная промышленность IV"
+ industrial_complex4_desc:0 ""
  fortification_tech:0 "Технологии фортификации"
  fortification1:0 "Фортификация I"
  fortification1_desc:0 "Выстроив базовые оборонительные позиции, мы сможем легко повысить свой защитный потенциал."
@@ -23,15 +27,16 @@
  fortification3:0 "Фортификация III"
  fortification3_desc:0 "Благодаря металлическим конструкциям, установленным перед нашими оборонительными позициями, врагу будет трудно продвигаться к нашим укрепленным позициям, которые мы сможем легко защитить."
  anti_air_building1:0 "ПВО I"
+ anti_air_building1_desc:0 "" 
  anti_air_building2:0 "ПВО II"
+ anti_air_building2_desc:0 ""
  oil_production1:0 "Нефтедобыча I"
  oil_production1_desc:0 "С развитием технологий бурения нефтяных скважин мы можем добывать больше нефти, чем раньше."
  oil_production2:0 "Нефтедобыча II"
  oil_production2_desc:0 "Прогресс в геологии помогает нам определить, где находятся самые большие запасы нефти, и мы можем сосредоточить наши усилия в тех местах, где будут расположены более крупные месторождения."
  oil_production3:0 "Нефтедобыча III"
  oil_production3_desc:0 "Совершенствование ключевых процессов, связанных с добычей нефти, сделает все наши буровые площадки гораздо более эффективными."
- 
- 
+ #GRENADES
  early_grenades:0 "Ранние гранаты"
  early_grenades_desc:0 "На рубеже XX века неэффективность имеющихся типов ручных гранат, а также их опасность для пользователя и сложность в эксплуатации привели к тому, что они стали считаться все более устаревающими образцами военного снаряжения."
  basic_grenades:0 "Ручные гранаты"
@@ -40,7 +45,7 @@
  improved_grenades_desc:0 "Первая «безопасная граната». Наполненные взрывчаткой стальные канистры с пусковым штырем и характерной глубоко зазубренной поверхностью. Часто ошибочно считается, что сегментация способствует раздроблению."
  advanced_grenades:0 "Газовые гранаты"
  advanced_grenades_desc:0 "26-мм гранаты, наполненные этилбромацетатом или хлорацетоном."
- 
+ #ARTILLERY+
  recon_armored_car:0 "Разведывательный бронеавтомобиль"
  howitzer:0 "Поддержка гаубицы"      
  howitzer2:0 "Модернизация гаубицы I"
@@ -67,7 +72,7 @@
  coil_ignition_desc:0 "Катушка трамблера - это тип высоковольтной катушки зажигания, используемой в системе зажигания ранних автомобилей, в первую очередь на «Benz Patent-Motorwagen» и «Ford Model T», выпускавшихся с 1909 года."
  distributor_based_ignition:0 "Зажигание на базе распределителя"
  distributor_based_ignition_desc:0 "Усовершенствованная система зажигания была изобретена Чарльзом Кеттерингом в компании «Delco» в США и внедрена в автомобили «Cadillac». Система зажигания Кеттеринга состояла из одной катушки зажигания, прерывателей, конденсатора (для предотвращения возникновения дуги в точках) и распределителя, который направлял электричество от катушки зажигания в нужный цилиндр."
- 
+ #ELECTRICAL+
  chemical_research:0 "Химические исследования"
  chemical_research_desc:0 "В нашем мире существует бесчисленное множество элементов, в отличие от того, что древние люди привыкли считать, что только вода, огонь, воздух и земля - это все в мире. И если мы научимся обращаться с этими вещами, мы сможем создать огромное количество соединений. И здесь есть бесконечные возможности."
  aircraft_engine:0 "Авиационный двигатель"
@@ -120,7 +125,7 @@
  decryption_machine_desc:0 "Дешифровальная машина" 
  early_fire_control_system:0 "Система раннего управления огнем"
  early_fire_control_system_desc:0 "Ранние системы управления огнем были созданы на основе оригинальных механических вычислительных устройств. В каком-то смысле они были гигантскими калькуляторами для расчета дальности или направления."
- # LAND DOCTRINES
+ #LAND DOCTRINES
  TITLE_WW1_LANDDOCTRINE:0 "Доктрина эпохи Великой войны"
  WW1_LANDDOCTRINE_DESC:0 "Франко-прусская война определила всю полноту современной войны, а русско-японская война показала важность фортификации.\nБольшая война подвергнет испытанию многие тактические приемы..."
  BITE_AND_HOLD_LABEL:0 "КУСАТЬ И УДЕРЖИВАТЬ"
@@ -157,7 +162,7 @@
  ww1_artillery_support_desc:0 "К сожалению, мы не смогли вовремя понять ценность некоторых великих технологических достижений, таких как бронированные автомобили или танки. Имея численное превосходство противника в новой технике, мы можем компенсировать это, сосредоточившись на снабжении нашей пехоты большим количеством автоматов, стальных касок, гранат и артиллерийской поддержки. Лучший материал выиграет войну, и наша промышленность обеспечит его."
  ww1_combined_arms:0 "Общевойсковое вооружение"
  ww1_combined_arms_desc:0 "Танки, газ и авиация навсегда изменили облик современной войны. С появлением новых технологий и приемов, разработанных для обеспечения превосходства над противником, стало ясно, что война на истощение больше не является жизнеспособной стратегией для победы в этой войне. Вместо этого мы бросим все оружие на врага, чтобы обеспечить победу в едином наступлении по всей линии фронта."
- # AIR DOCTRINES
+ #AIR DOCTRINES
  TITLE_WW1_AIRDOCTRINE:0 "Доктрина эпохи Великой войны"
  WW1_AIRDOCTRINE_DESC:0 "Появление летательных аппаратов тяжелее воздуха стало предвестником изменения характера военных действий."
  ww1_airdoctrine:0 "Аэростаты наблюдения"
@@ -186,8 +191,7 @@
  ww1_independent_air_force_desc:0 "Чтобы эффективно направлять наши действия, необходимо перестать полагаться на ВВС."
  ww1_twilight_of_the_airship:0 "Закат дирижаблей"
  ww1_twilight_of_the_airship_desc:0 "Высота боевых дирижаблей вот-вот будет достигнута, пора использовать ее по максимуму."
- 
- 
+ #MISC 
  motorised_infantry2:0 "Моторизованная пехота"
  motorised_infantry2_desc:0 "Расширение использования автотранспорта для перевозки пехоты в полевых условиях позволяет значительно повысить мобильность медлительных пехотных подразделений, что дает возможность быстрее реагировать и разрабатывать новые стратегии."
  russian_research_name:0 "Русская военная кооперация"
