--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5548,6 +5548,7 @@ ROM_new_constitution:0 "A New Constitution"
 ROM_cooperative_agriculture:0 "Cooperative Agriculture"
 ROM_nationalize_steel_industry:0 "Nationalize the Steel Industry"
 ROM_poporanist:0 "Poporanism"
+conservative_coalition:0 "Conservative Coalition"
 ww1_romania.67.t:0 "Fusion of the PC and PCD"
 ww1_romania.67.d:0 "With a complete dominance in Romanian politics as it stands, the PCD has lots of leverage against the PC, now struggling to find a voter base. With this, Take Ionsecu has organized a meeting with several top PC officals to discuss a political merge. With little other choice, PC leaders have agreed to join the PCD and form a broad center right party."
 ww1_romania.67.a:0 "This will expand our mandate greatly!"
