--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5550,6 +5550,7 @@ ROM_nationalize_steel_industry:0 "Nationalize the Steel Industry"
 ROM_poporanist:0 "Poporanism"
 conservative_coalition:0 "Conservative Coalition"
 ww1_romania.67.t:0 "Fusion of the PC and PCD"
+ROM_kick_pnl_from_coalition:0 "Sideline the PNL"
 ww1_romania.67.d:0 "With a complete dominance in Romanian politics as it stands, the PCD has lots of leverage against the PC, now struggling to find a voter base. With this, Take Ionsecu has organized a meeting with several top PC officals to discuss a political merge. With little other choice, PC leaders have agreed to join the PCD and form a broad center right party."
 ww1_romania.67.a:0 "This will expand our mandate greatly!"
 ROM_expansion_of_the_middle_class:0 "Expand the Middle Class"
