--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5594,7 +5594,7 @@ ROM_the_kings_government:0 "The King's Favorites"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
 ROM_invite_fredrick_wilhelm.tt:0 "§YFriedrich William§! will be crowned as king of Romania"
-ROM_attract_war_industry:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-5.00%§!\n£factory_output_texticon Factory Output: §G+7.50%§!"
+ROM_attract_war_industry:0 "Modify §YRomanian Army§! by\n£factory_output_texticon Factory Output: §G+7.00%§!"
 ROM_full_mob.tt:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-10.00%§!\n£factory_output_texticon Factory Output: §G+10.00%§!\n "
 ROM_stable_mob.tt:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-2.50%§!\n£factory_output_texticon Factory Output: §G+5.00%§!\n "
 modify_rom_army_sup:0 "Modify §YRomanian Army§! by\n £supply_consumption_texticon Supply Consumption: §G-10.00%§!"
